Fix lot of bugs and add sprites mixin

--- a/jquery.cute-element.css
+++ b/jquery.cute-element.css
@@ -1,7 +1,9 @@
 @charset "UTF-8";
+/* line 7, jquery.cute-element.scss */
 .cute-element-box-sizing, .cute-element-select, .cute-element-select-option, .cute-element-box-sizing:before, .cute-element-select:before, .cute-element-select-option:before, .cute-element-box-sizing:after, .cute-element-select:after, .cute-element-select-option:after {
   box-sizing: border-box; }
 
+/* line 12, jquery.cute-element.scss */
 .cute-element-select {
   display: inline-block;
   position: relative;
@@ -12,6 +14,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis; }
+  /* line 24, jquery.cute-element.scss */
   .cute-element-select:after {
     position: absolute;
     right: 5px;
@@ -23,17 +26,21 @@
     border-style: solid;
     border-width: 8px 6px 0 6px;
     border-color: #000000 transparent transparent transparent; }
+  /* line 38, jquery.cute-element.scss */
   .cute-element-select:hover:after {
     border-color: #1290cc transparent transparent transparent; }
+  /* line 43, jquery.cute-element.scss */
   .cute-element-select.cute-element-select-icon {
     background-size: 16px 48%;
     background-position: 5px center;
     background-repeat: no-repeat;
     padding-left: 28px; }
+  /* line 51, jquery.cute-element.scss */
   .cute-element-select.cute-element-select-open:after {
     border-width: 0 6px 8px 6px;
     border-color: transparent transparent #1290cc transparent; }
 
+/* line 58, jquery.cute-element.scss */
 .cute-element-select-option {
   display: none;
   position: absolute;
@@ -42,8 +49,10 @@
   border: 1px solid #ddd;
   background-color: #fff;
   z-index: 999999; }
+  /* line 67, jquery.cute-element.scss */
   .cute-element-select-option li {
     display: block; }
+    /* line 69, jquery.cute-element.scss */
     .cute-element-select-option li a {
       display: block;
       position: relative;
@@ -51,22 +60,27 @@
       padding: 2px 8px 2px 8px;
       border-bottom: 1px solid #ddd;
       color: #333; }
+      /* line 76, jquery.cute-element.scss */
       .cute-element-select-option li a:hover, .cute-element-select-option li a.selected {
         background-color: #1290cc;
         color: #fff; }
+      /* line 81, jquery.cute-element.scss */
       .cute-element-select-option li a.cute-element-select-option-icon {
         background-size: 16px 48%;
         background-position: 5px center;
         background-repeat: no-repeat;
         padding-left: 28px; }
+    /* line 89, jquery.cute-element.scss */
     .cute-element-select-option li:last-child a {
       border-bottom: 0; }
+  /* line 95, jquery.cute-element.scss */
   .cute-element-select-option.cute-element-select-option-open {
     display: block; }
 
 /* =================
    Checkbox et radio
    ================= */
+/* line 103, jquery.cute-element.scss */
 .cute-element-input-label {
   display: inline-block;
   cursor: pointer;
@@ -74,9 +88,11 @@
   vertical-align: middle;
   height: 20px;
   line-height: 20px; }
+  /* line 110, jquery.cute-element.scss */
   .cute-element-input-label.disabled {
     cursor: default; }
 
+/* line 243, jquery.cute-element.scss */
 .cute-element-input-theme-checkbox {
   display: inline-block;
   vertical-align: middle;
@@ -88,12 +104,13 @@
   width: 20px;
   height: 20px;
   border: 1px solid #ddd;
-  -webkit-box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  -webkit-border-radius: 0;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
   -moz-border-radius: 0;
+  -webkit-border-radius: 0;
   border-radius: 0; }
+  /* line 147, jquery.cute-element.scss */
   .cute-element-input-theme-checkbox:before {
     display: none;
     position: absolute;
@@ -108,25 +125,32 @@
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0; }
+  /* line 180, jquery.cute-element.scss */
   .cute-element-input-theme-checkbox:focus, .cute-element-input-theme-checkbox:hover {
-    -webkit-box-shadow: 0px 0px -3px -1px #1290cc;
-    -moz-box-shadow: 0px 0px -3px -1px #1290cc;
-    box-shadow: 0px 0px -3px -1px #1290cc; }
+    -moz-box-shadow: black 0 0 1px;
+    -webkit-box-shadow: black 0 0 1px;
+    box-shadow: black 0 0 1px; }
+  /* line 185, jquery.cute-element.scss */
   .cute-element-input-theme-checkbox.checked:before {
     display: block; }
-  .cute-element-input-theme-checkbox.checked.disabled {
-    cursor: default;
-    background-color: #d4d4d4; }
+  /* line 190, jquery.cute-element.scss */
   .cute-element-input-theme-checkbox.disabled {
     cursor: default;
-    background-color: #d4d4d4; }
+    background-color: #d5d5d5; }
+    /* line 193, jquery.cute-element.scss */
     .cute-element-input-theme-checkbox.disabled:before {
       background-color: #eee; }
+    /* line 201, jquery.cute-element.scss */
+    .cute-element-input-theme-checkbox.disabled.checked {
+      cursor: default;
+      background-color: #d5d5d5; }
+    /* line 205, jquery.cute-element.scss */
     .cute-element-input-theme-checkbox.disabled:focus, .cute-element-input-theme-checkbox.disabled:hover {
-      -webkit-box-shadow: 0px 0px -3px -1px #1290cc;
-      -moz-box-shadow: 0px 0px -3px -1px #1290cc;
-      box-shadow: 0px 0px -3px -1px #1290cc; }
+      -moz-box-shadow: none;
+      -webkit-box-shadow: none;
+      box-shadow: none; }
 
+/* line 247, jquery.cute-element.scss */
 .cute-element-input-theme-radio {
   display: inline-block;
   vertical-align: middle;
@@ -138,12 +162,13 @@
   width: 20px;
   height: 20px;
   border: 1px solid #ddd;
-  -webkit-box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  -webkit-border-radius: 20px;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
   -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
   border-radius: 20px; }
+  /* line 147, jquery.cute-element.scss */
   .cute-element-input-theme-radio:before {
     display: none;
     position: absolute;
@@ -158,25 +183,32 @@
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px; }
+  /* line 180, jquery.cute-element.scss */
   .cute-element-input-theme-radio:focus, .cute-element-input-theme-radio:hover {
-    -webkit-box-shadow: 0px 0px -3px -1px #1290cc;
-    -moz-box-shadow: 0px 0px -3px -1px #1290cc;
-    box-shadow: 0px 0px -3px -1px #1290cc; }
+    -moz-box-shadow: black 0 0 1px;
+    -webkit-box-shadow: black 0 0 1px;
+    box-shadow: black 0 0 1px; }
+  /* line 185, jquery.cute-element.scss */
   .cute-element-input-theme-radio.checked:before {
     display: block; }
-  .cute-element-input-theme-radio.checked.disabled {
-    cursor: default;
-    background-color: #d4d4d4; }
+  /* line 190, jquery.cute-element.scss */
   .cute-element-input-theme-radio.disabled {
     cursor: default;
-    background-color: #d4d4d4; }
+    background-color: #d5d5d5; }
+    /* line 193, jquery.cute-element.scss */
     .cute-element-input-theme-radio.disabled:before {
       background-color: #eee; }
+    /* line 201, jquery.cute-element.scss */
+    .cute-element-input-theme-radio.disabled.checked {
+      cursor: default;
+      background-color: #d5d5d5; }
+    /* line 205, jquery.cute-element.scss */
     .cute-element-input-theme-radio.disabled:focus, .cute-element-input-theme-radio.disabled:hover {
-      -webkit-box-shadow: 0px 0px -3px -1px #1290cc;
-      -moz-box-shadow: 0px 0px -3px -1px #1290cc;
-      box-shadow: 0px 0px -3px -1px #1290cc; }
+      -moz-box-shadow: none;
+      -webkit-box-shadow: none;
+      box-shadow: none; }
 
+/* line 255, jquery.cute-element.scss */
 .cute-element-input-theme-check-heavy {
   display: inline-block;
   vertical-align: middle;
@@ -188,12 +220,13 @@
   width: 20px;
   height: 20px;
   border: 1px solid #ddd;
-  -webkit-box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  -webkit-border-radius: 0;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
   -moz-border-radius: 0;
+  -webkit-border-radius: 0;
   border-radius: 0; }
+  /* line 147, jquery.cute-element.scss */
   .cute-element-input-theme-check-heavy:before {
     display: none;
     position: absolute;
@@ -216,25 +249,32 @@
     text-align: left;
     text-decoration: none;
     -webkit-font-smoothing: antialiased; }
+  /* line 180, jquery.cute-element.scss */
   .cute-element-input-theme-check-heavy:focus, .cute-element-input-theme-check-heavy:hover {
-    -webkit-box-shadow: 0px 0px -3px -1px #1290cc;
-    -moz-box-shadow: 0px 0px -3px -1px #1290cc;
-    box-shadow: 0px 0px -3px -1px #1290cc; }
+    -moz-box-shadow: black 0 0 1px;
+    -webkit-box-shadow: black 0 0 1px;
+    box-shadow: black 0 0 1px; }
+  /* line 185, jquery.cute-element.scss */
   .cute-element-input-theme-check-heavy.checked:before {
     display: block; }
-  .cute-element-input-theme-check-heavy.checked.disabled {
-    cursor: default;
-    background-color: #d4d4d4; }
+  /* line 190, jquery.cute-element.scss */
   .cute-element-input-theme-check-heavy.disabled {
     cursor: default;
-    background-color: #d4d4d4; }
+    background-color: #d5d5d5; }
+    /* line 193, jquery.cute-element.scss */
     .cute-element-input-theme-check-heavy.disabled:before {
       color: #eee; }
+    /* line 201, jquery.cute-element.scss */
+    .cute-element-input-theme-check-heavy.disabled.checked {
+      cursor: default;
+      background-color: #d5d5d5; }
+    /* line 205, jquery.cute-element.scss */
     .cute-element-input-theme-check-heavy.disabled:focus, .cute-element-input-theme-check-heavy.disabled:hover {
-      -webkit-box-shadow: 0px 0px -3px -1px #1290cc;
-      -moz-box-shadow: 0px 0px -3px -1px #1290cc;
-      box-shadow: 0px 0px -3px -1px #1290cc; }
+      -moz-box-shadow: none;
+      -webkit-box-shadow: none;
+      box-shadow: none; }
 
+/* line 264, jquery.cute-element.scss */
 .cute-element-input-theme-bullet-outline {
   display: inline-block;
   vertical-align: middle;
@@ -246,12 +286,13 @@
   width: 20px;
   height: 20px;
   border: 1px solid #ddd;
-  -webkit-box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  -webkit-border-radius: 20px;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
   -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
   border-radius: 20px; }
+  /* line 147, jquery.cute-element.scss */
   .cute-element-input-theme-bullet-outline:before {
     display: none;
     position: absolute;
@@ -274,25 +315,32 @@
     text-align: left;
     text-decoration: none;
     -webkit-font-smoothing: antialiased; }
+  /* line 180, jquery.cute-element.scss */
   .cute-element-input-theme-bullet-outline:focus, .cute-element-input-theme-bullet-outline:hover {
-    -webkit-box-shadow: 0px 0px -3px -1px #1290cc;
-    -moz-box-shadow: 0px 0px -3px -1px #1290cc;
-    box-shadow: 0px 0px -3px -1px #1290cc; }
+    -moz-box-shadow: black 0 0 1px;
+    -webkit-box-shadow: black 0 0 1px;
+    box-shadow: black 0 0 1px; }
+  /* line 185, jquery.cute-element.scss */
   .cute-element-input-theme-bullet-outline.checked:before {
     display: block; }
-  .cute-element-input-theme-bullet-outline.checked.disabled {
-    cursor: default;
-    background-color: #d4d4d4; }
+  /* line 190, jquery.cute-element.scss */
   .cute-element-input-theme-bullet-outline.disabled {
     cursor: default;
-    background-color: #d4d4d4; }
+    background-color: #d5d5d5; }
+    /* line 193, jquery.cute-element.scss */
     .cute-element-input-theme-bullet-outline.disabled:before {
       color: #eee; }
+    /* line 201, jquery.cute-element.scss */
+    .cute-element-input-theme-bullet-outline.disabled.checked {
+      cursor: default;
+      background-color: #d5d5d5; }
+    /* line 205, jquery.cute-element.scss */
     .cute-element-input-theme-bullet-outline.disabled:focus, .cute-element-input-theme-bullet-outline.disabled:hover {
-      -webkit-box-shadow: 0px 0px -3px -1px #1290cc;
-      -moz-box-shadow: 0px 0px -3px -1px #1290cc;
-      box-shadow: 0px 0px -3px -1px #1290cc; }
+      -moz-box-shadow: none;
+      -webkit-box-shadow: none;
+      box-shadow: none; }
 
+/* line 275, jquery.cute-element.scss */
 .cute-element-input-theme-smiley-happy-face {
   display: inline-block;
   vertical-align: middle;
@@ -304,12 +352,13 @@
   width: 20px;
   height: 20px;
   border: 0;
-  -webkit-box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 0px -3px -1px rgba(0, 0, 0, 0.25);
-  -webkit-border-radius: 20px;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
   -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
   border-radius: 20px; }
+  /* line 147, jquery.cute-element.scss */
   .cute-element-input-theme-smiley-happy-face:before {
     display: none;
     position: absolute;
@@ -332,21 +381,59 @@
     text-align: left;
     text-decoration: none;
     -webkit-font-smoothing: antialiased; }
+  /* line 180, jquery.cute-element.scss */
   .cute-element-input-theme-smiley-happy-face:focus, .cute-element-input-theme-smiley-happy-face:hover {
-    -webkit-box-shadow: 0px 0px -3px -1px #1290cc;
-    -moz-box-shadow: 0px 0px -3px -1px #1290cc;
-    box-shadow: 0px 0px -3px -1px #1290cc; }
+    -moz-box-shadow: black 0 0 1px;
+    -webkit-box-shadow: black 0 0 1px;
+    box-shadow: black 0 0 1px; }
+  /* line 185, jquery.cute-element.scss */
   .cute-element-input-theme-smiley-happy-face.checked:before {
     display: block; }
-  .cute-element-input-theme-smiley-happy-face.checked.disabled {
-    cursor: default;
-    background-color: #d4d4d4; }
+  /* line 190, jquery.cute-element.scss */
   .cute-element-input-theme-smiley-happy-face.disabled {
     cursor: default;
-    background-color: #d4d4d4; }
+    background-color: #d5d5d5; }
+    /* line 193, jquery.cute-element.scss */
     .cute-element-input-theme-smiley-happy-face.disabled:before {
       color: #eee; }
+    /* line 201, jquery.cute-element.scss */
+    .cute-element-input-theme-smiley-happy-face.disabled.checked {
+      cursor: default;
+      background-color: #d5d5d5; }
+    /* line 205, jquery.cute-element.scss */
     .cute-element-input-theme-smiley-happy-face.disabled:focus, .cute-element-input-theme-smiley-happy-face.disabled:hover {
-      -webkit-box-shadow: 0px 0px -3px -1px #1290cc;
-      -moz-box-shadow: 0px 0px -3px -1px #1290cc;
-      box-shadow: 0px 0px -3px -1px #1290cc; }
+      -moz-box-shadow: none;
+      -webkit-box-shadow: none;
+      box-shadow: none; }
+
+/* line 287, jquery.cute-element.scss */
+.cute-element-input-theme-sprites {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  padding: 0;
+  margin: 0 4px 0 0;
+  text-decoration: none;
+  height: 46px;
+  width: 46px;
+  background: url('sprites-s8977071d6d.png');
+  background-position: 0 0; }
+  /* line 222, jquery.cute-element.scss */
+  .cute-element-input-theme-sprites:focus, .cute-element-input-theme-sprites:hover {
+    background-position: -46px 0; }
+  /* line 225, jquery.cute-element.scss */
+  .cute-element-input-theme-sprites.checked {
+    background-position: -92px 0; }
+    /* line 227, jquery.cute-element.scss */
+    .cute-element-input-theme-sprites.checked:focus, .cute-element-input-theme-sprites.checked:hover {
+      background-position: -138px 0; }
+  /* line 231, jquery.cute-element.scss */
+  .cute-element-input-theme-sprites.disabled {
+    cursor: default;
+    background-position: -184px 0; }
+    /* line 234, jquery.cute-element.scss */
+    .cute-element-input-theme-sprites.disabled:focus, .cute-element-input-theme-sprites.disabled:hover {
+      background-position: -184px 0; }
+    /* line 237, jquery.cute-element.scss */
+    .cute-element-input-theme-sprites.disabled.checked {
+      background-position: -230px 0; }
